--- a/index.html
+++ b/index.html
@@ -14,50 +14,79 @@
     <h1>Bennett the Builder Game</h1>
     <div class="border">
         <div class="grid">
-            <div>item 1.
-                <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quam ducimus voluptatum quasi odio tempora. Nisi nobis ipsum officiis, aliquid, alias consectetur cupiditate voluptas veritatis mollitia, libero reiciendis fuga error!
+            <div> <p>
+                Welcome to "Bennett the Builder"! In this game, you'll embark on a thrilling adventure to
+                locate Bennett's scattered tools across various construction sites. Get ready to sharpen your memory and observational skills
+                as you navigate through the challenges. Let's dive into the instructions:
+            </p>
+                <p>The main goal of the game is to find and collect all your scattered tools within the specified time limit. Each level
+                presents a new set of tools to locate, and as you progress, the difficulty increases.</p>
+                <b>1. **Starting a Level:** </b>
+                <br>
+                - Select a level to begin. Initially, only the first level will be available. As you successfully complete levels,
+                you'll unlock more challenging ones.
+                <br>
+                <b>2. **Tool List:**</b>
+                <br>
+                - Before starting the level, you'll be presented with a list of tools you need to find. Take a moment to familiarize
+                yourself with the names and shapes of these tools.
+                <br>
+                <b>3. **Construction Site Exploration:**</b>
+                <br>
+                - Once the level begins, you'll find yourself looking at cards.Use the mouse and click the cards to help you find the missing tools.
+                <!--              - Once the level begins, you'll find yourself looking at cards that resemble the tools you are looking for. Use the mouse and clicking the cards will help you to look around and interact with objects. -->
+                <!-- You can use the arrow keys or WASD keys to move around, and  -->
+                <br>
+                <!-- 4. **Locating Tools:**
+                - Your tools will be scattered around the construction site. They could be hidden behind crates, on top of scaffolding,
+                or amidst other construction materials. Keep a keen eye on your surroundings. -->
+                <b>4. **Interaction:**</b>
+                - To pick up a tool, move close to it and click on it with your mouse. The tool will then be added to your inventory.
+                <br>
+                <b>5. **Inventory:**</b>
+                - At the bottom or side of the screen, there will be a display showing the tools you've collected so far. Refer to this
+                list to keep track of your progress.
+                <!-- 7. **Time Limit:**
+                - Each level comes with a time limit. You must find all the tools before the time runs out. Keep an eye on the timer
+                displayed on the screen.
+                
+                8. **Hints:**
+                - If you're having trouble finding a tool, you can use hints. However, be mindful that using hints will deduct points
+                from your final score. -->
+                <br>
+                <b>6. **Completing a Level:**</b>
+                - Once you've collected all the required tools within the time limit, you'll proceed to the next level. Celebrate your
+                success and get ready for more challenging tasks ahead!
+                <!-- **Scoring:**
+                - Your score is determined by various factors, including the time taken to complete the level, the number of hints used,
+                and the accuracy of tool collection. Strive for efficiency and accuracy to earn a high score. -->
             </div>
             <div><div class="container">
-                <div class="box1"><img class="middlePic" src="./images/paint.png" alt="paint bucket" width="100px" height="100px" text-align="center"></div>
-                <div class="box2"><img class="middlePic" src="./images/wrench.png" alt="wrench" width="100px" height="100px"></div>
-                <div class="box1"><img class="middlePic" src="./images/skate.png" alt="wrench" width="100px" height="100px"></div>
-                <div class="box2"><img class="middlePic" src="./images/hammer.png" alt="wrench" width="100px" height="100px"></div>
-                <div class="box1"><img class="middlePic" src="./images/fork.png" alt="wrench" width="100px" height="100px"></div>
-                <div class="box2"><img class="middlePic" src="./images/drill.png" alt="wrench" width="100px" height="100px"></div>
-                <div class="box1"><img class="middlePic" src="./images/saw.png" alt="wrench" width="100px" height="100px"></div>
-                <div class="box2"><img class="middlePic" src="./images/screwdriver.png" alt="wrench" width="100px" height="100px"></div>
-                <div class="box1"><img class="middlePic" src="./images/stapler.png" alt="wrench" width="100px" height="100px"></div>
-                <div class="box2"><img class="middlePic" src="./images/tapem.png" alt="wrench" width="100px" height="100px"></div>
-                <div class="box1"><img class="middlePic" src="./images/coffee.png" alt="wrench" width="100px" height="100px"></div>
-                <div class="box2"><img class="middlePic" src="./images/bananas.png" alt="wrench" width="100px" height="100px"></div>
-                <div class="box1"><img class="middlePic" src="./images/tape.png" alt="wrench" width="100px" height="100px"></div>
-                <div class="box2"><img class="middlePic" src="./images/apple.png" alt="wrench" width="100px" height="100px"></div>
-                <div class="box1"><img class="middlePic" src="./images/crayon.png" alt="wrench" width="100px" height="100px"></div>
-                <div class="box2"><img class="middlePic" src="./images/nails.png" alt="wrench" width="100px" height="100px"></div>
-                <div class="box1"><img class="middlePic" src="./images/clamp.png" alt="wrench" width="100px" height="100px"></div>
-                <div class="box2"><img class="middlePic" src="./images/wood.png" alt="wrench" width="100px" height="100px"></div>
-                <div class="box1"><img class="middlePic" src="./images/glue.png" alt="wrench" width="100px" height="100px"></div>
-                <div class="box2"><img class="middlePic" src="./images/level.png" alt="wrench" width="100px" height="100px"></div>
+                <div class="box"><img id="paint" src="./images/paint.png" alt="paint bucket" width="100px" height="100px" text-align="center"></div>
+                <div class="box"><img id="wrench" src="./images/wrench.png" alt="wrench" width="100px" height="100px"></div>
+                <div class="box"><img id="skate" src="./images/skate.png" alt="skate board" width="100px" height="100px"></div>
+                <div class="box"><img id="hammer" src="./images/hammer.png" alt="hammer" width="100px" height="100px"></div>
+                <div class="box"><img id="fork" src="./images/fork.png" alt="fork" width="100px" height="100px"></div>
+                <div class="box"><img id="drill" src="./images/drill.png" alt="drill" width="100px" height="100px"></div>
+                <div class="box"><img id="saw" src="./images/saw.png" alt="saw" width="100px" height="100px"></div>
+                <div class="box"><img id="screwdriver" src="./images/screwdriver.png" alt="screw driver" width="100px" height="100px"></div>
+                <div class="box"><img id="stapler" src="./images/stapler.png" alt="stapler" width="100px" height="100px"></div>
+                <div class="box"><img id="tapem" src="./images/tapem.png" alt="tape measure" width="100px" height="100px"></div>
+                <div class="box"><img id="coffee" src="./images/coffee.png" alt="coffee cup" width="100px" height="100px"></div>
+                <div class="box"><img id="bananas" src="./images/bananas.png" alt="bananas" width="100px" height="100px"></div>
+                <div class="box"><img id="duct" src="./images/tape.png" alt="duct tape" width="100px" height="100px"></div>
+                <div class="box"><img id="apple" src="./images/apple.png" alt="red apple" width="100px" height="100px"></div>
+                <div class="box"><img id="crayon" src="./images/crayon.png" alt="crayon" width="100px" height="100px"></div>
+                <div class="box"><img id="nails" src="./images/nails.png" alt="nails" width="100px" height="100px"></div>
+                <div class="box"><img id="metal clamp" src="./images/clamp.png" alt="metal clamp" width="100px" height="100px"></div>
+                <div class="box"><img id="wood" src="./images/wood.png" alt="plank of wood" width="100px" height="100px"></div>
+                <div class="box"><img id="glue" src="./images/blackbox.png" alt="glue bottle" width="100px" height="100px"></div>
+                <div id="box2"><img id="level" src="./images/blackbox.png" alt="level" width="100px" height="100px"></div>
              </div>
             </div>
-            <div> <img class="middlePic" src="./images/bennett0.png" alt="Cartoon Construction Worker" width="600" height="600"></div>
+            <div id="benbox"> <img class="bennett" src="./images/bennett0.png" alt="Cartoon Construction Worker" width="350" height="350"></div>
         </div>
     </div>
-</body>
-
-
-<body>
-<!--     
-    <div class="container">
-        <p><img class="middlePic" src="./images/bennett1.png" alt="Cartoon Construction Worker" width="600" height="600"></p>
-        <p>Can you Help Bennett find his tool.</p>
-               
-        <div id="box2">
-            <p> Can you Help Bennett find his tool.</p>
-        </div>
-    </div>
-        <div id="box3">
-        </div> -->
 </body>
 <script src="script.js"></script>
 
