added a paly again/ end level section

--- a/1st-draft/index.html
+++ b/1st-draft/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -34,7 +34,7 @@
                 <b>3. **Construction Site Exploration:**</b>
                 <br>
                 - Once the level begins, you'll find yourself looking at cards.Use the mouse and click the cards to help you find the missing tools.
-                <!--              - Once the level begins, you'll find yourself looking at cards that resemble the tools you are looking for. Use the mouse and clicking the cards will help you to look around and interact with objects. -->
+                            - Once the level begins, you'll find yourself looking at cards that resemble the tools you are looking for. Use the mouse and clicking the cards will help you to look around and interact with objects. -->
                 <!-- You can use the arrow keys or WASD keys to move around, and  -->
                 <br>
                 <!-- 4. **Locating Tools:**
@@ -87,6 +87,8 @@
             <div id="benbox"> <img class="bennett" src="./images/bennett0.png" alt="Cartoon Construction Worker" width="350" height="350"></div>
         </div>
     </div>
+
+    
 </body>
 <script src="script.js"></script>
 
