--- a/level1.html
+++ b/level1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styleslevel1.css">
-    <title>Memor Game.</title>
+    <title>Memory Game.</title>
 </head>
 
 
@@ -48,11 +48,11 @@
                 <b>4. **Interaction:**</b>
                 - To pick up a tool, move close to it and click on it with your mouse. The tool will then be added to
                 your inventory.
-                <br>
+                <!-- <br>
                 <b>5. **Inventory:**</b>
                 - At the bottom or side of the screen, there will be a display showing the tools you've collected so
                 far. Refer to this
-                list to keep track of your progress.
+                list to keep track of your progress. -->
                 <!-- 7. **Time Limit:**
                 - Each level comes with a time limit. You must find all the tools before the time runs out. Keep an eye on the timer
                 displayed on the screen.
@@ -99,20 +99,24 @@
         </div>
     </div>
 </div>
-<!-- 
-<section id="congratsSection" class="hidden">
-        <div id="congratsDiv">
-                <img src="./assets/congrats.jpg" alt="congratsImage">
+
+<!-- <section id="endLevelSection" class="hidden">
+        <div id="endLevelDiv">
+                <img src="./images/full.png" alt="full tool box">
                 <p class="final">
                         <span id="totalTime"></span>
                 </p>
                 <br>
                 <p>
-                        <a class="again">Play Again !! </a>
+                        Congradulations!
+                        <br>
+                        <a class="again">You filled up the ToolBox!!!
+                                <br>
+                        <button type="button" id="btnAgain">Play again?!</button>
                 </p>
         </div>
 </section> -->
-</body>
+
 <script src="script.js"></script>
 
 </html>
