added timer that is commented out and added check for match

--- a/level1.html
+++ b/level1.html
@@ -8,8 +8,6 @@
     <title>Memory Game.</title>
 </head>
 
-
-
 <body>
     <h1>Bennett the Builder Game</h1>
 <div class="main-container">
@@ -77,9 +75,8 @@
                         <div class="memory-card" class="front-face" class="back-face"><img class="fork" src="./images/fork.png" alt="fork" width="100px" height="100px"></div>
                         <div class="memory-card" class="front-face" class="back-face"><img class="screwdriver" src="./images/screwdriver.png" alt="screw driver" width="100px" height="100px"></div>
                         <div class="memory-card" class="front-face" class="back-face"><img class="stapler" src="./images/stapler.png" alt="stapler" width="100px" height="100px"></div>
-                        
+                        <div class="memory-card" class="front-face" class="back-face"><img class="hammer" src="./images/hammer.png" alt="hammer" width="100px" height="100px"></div>
                         <div class="memory-card" class="front-face" class="back-face"><img class="coffee" src="./images/coffee.png" alt="coffee cup" width="100px" height="100px"></div>
-                        <div class="memory-card" class="front-face" class="back-face"><img class="bananas" src="./images/bananas.png" alt="bananas" width="100px" height="100px"></div>
                         <div class="memory-card" class="front-face" class="back-face"><img class="bananas" src="./images/bananas.png" alt="bananas" width="100px" height="100px"></div>
                         <!-- <div class="memory-card" class="front-face" class="back-face"><img class="duct" src="./images/tape.png" alt="duct tape" width="100px" height="100px"></div> -->
 
@@ -111,6 +108,11 @@
                             <img class="bennett" src="./images/03.png" alt="red star with number 3 inside" width="80" height="80">
                             <img class="bennett" src="./images/04.png" alt="red star with number 4 inside" width="80" height="80">
                        </div>
+                    <h2>TIMER:</h2>
+                    <div id="timer" id="counter">
+                            <span class="minute">00</span>
+                            <span>:</span>
+                            <span class="second">00</span>
                     </div>
 
             </div>          
@@ -136,6 +138,6 @@
 </section>
 
 <script src="script.js"></script>
-<script src='js/timer.js'></script>
+<script src='timer.js'></script>
 
 </html>
