--- a/level1.html
+++ b/level1.html
@@ -69,15 +69,15 @@
     </div>
     <div id="gamebox">
                     <div class="middle-container">
-                        <div class="memory-card" class="front-face" class="back-face"><img class="paint" src="./images/paint.png" alt="paint bucket" width="100px" height="100px"></div>
-                        <div class="memory-card" class="front-face" class="back-face"><img class="skate" src="./images/skate.png" alt="skate board" width="100px" height="100px"></div>
-                        <div class="memory-card" class="front-face" class="back-face"><img class="hammer" src="./images/hammer.png" alt="hammer" width="100px" height="100px"></div>
-                        <div class="memory-card" class="front-face" class="back-face"><img class="fork" src="./images/fork.png" alt="fork" width="100px" height="100px"></div>
-                        <div class="memory-card" class="front-face" class="back-face"><img class="screwdriver" src="./images/screwdriver.png" alt="screw driver" width="100px" height="100px"></div>
-                        <div class="memory-card" class="front-face" class="back-face"><img class="stapler" src="./images/stapler.png" alt="stapler" width="100px" height="100px"></div>
-                        <div class="memory-card" class="front-face" class="back-face"><img class="hammer" src="./images/hammer.png" alt="hammer" width="100px" height="100px"></div>
-                        <div class="memory-card" class="front-face" class="back-face"><img class="coffee" src="./images/coffee.png" alt="coffee cup" width="100px" height="100px"></div>
-                        <div class="memory-card" class="front-face" class="back-face"><img class="bananas" src="./images/bananas.png" alt="bananas" width="100px" height="100px"></div>
+                        <div class="memory-card" class="front-face"><img class="hidden" src="./images/skate.png" alt="skate board" width="100px" height="100px"></div>
+                        <div class="memory-card" class="front-face"><img class="hidden" src="./images/hammer.png" alt="hammer" width="100px" height="100px"></div>
+                        <div class="memory-card" class="front-face"><img class="hidden" src="./images/fork.png" alt="fork" width="100px" height="100px"></div>
+                        <div class="memory-card" class="front-face"><img class="hidden" src="./images/screwdriver.png" alt="screw driver" width="100px" height="100px"></div>
+                        <div class="memory-card" class="front-face"><img class="hidden" src="./images/stapler.png" alt="stapler" width="100px" height="100px"></div>
+                        <div class="memory-card" class="front-face"><img class="hidden" src="./images/hammer.png" alt="hammer" width="100px" height="100px"></div>
+                        <div class="memory-card" class="front-face"><img class="hidden" src="./images/paint.png" alt="paint bucket" width="100px" height="100px"></div>
+                        <div class="memory-card" class="front-face"><img class="hidden" src="./images/coffee.png" alt="coffee cup" width="100px" height="100px"></div>
+                        <div class="memory-card" class="front-face"><img class="hidden" src="./images/bananas.png" alt="bananas" width="100px" height="100px"></div>
                         <!-- <div class="memory-card" class="front-face" class="back-face"><img class="duct" src="./images/tape.png" alt="duct tape" width="100px" height="100px"></div> -->
 
                         <!-- <div class="memory-card" class="front-face" class="back-face"><img class="drill" src="./images/drill.png" alt="drill" width="100px" height="100px"></div>
@@ -90,7 +90,7 @@
                         <div class="memory-card-flip" class="front-face" class="back-face"><img id="metal clamp" src="./images/clamp.png" alt="metal clamp" width="100px" height="100px"></div>
                         <div class="memory-card-flip" class="front-face" class="back-face"><img id="wood" src="./images/blackmemory-card-flip.png" alt="plank of wood" width="100px" height="100px"></div>
                         <div class="memory-card-flip" class="front-face" class="back-face"><img id="glue" src="./images/blackmemory-card.png" alt="glue bottle" width="100px" height="100px"></div> -->
-                        <div class="memory-card" class="front-face" class="back-face"><img class="level" src="./images/level.png" alt="level" width="100px" height="100px"></div>
+                        <div class="memory-card" class="front-face" class="back-face"><img class="level hidden" src="./images/level.png" alt="level" width="100px" height="100px"></div>
                     </div>
         </div>
             <div id="endbox">
