--- a/level1.html
+++ b/level1.html
@@ -69,28 +69,29 @@
     </div>
     <div id="gamebox">
                     <div class="middle-container">
-                        <div class="memory-card" class="front-face"><img class="hidden" src="./images/skate.png" alt="skate board" width="100px" height="100px"></div>
-                        <div class="memory-card" class="front-face"><img class="hidden" src="./images/hammer.png" alt="hammer" width="100px" height="100px"></div>
-                        <div class="memory-card" class="front-face"><img class="hidden" src="./images/fork.png" alt="fork" width="100px" height="100px"></div>
-                        <div class="memory-card" class="front-face"><img class="hidden" src="./images/screwdriver.png" alt="screw driver" width="100px" height="100px"></div>
-                        <div class="memory-card" class="front-face"><img class="hidden" src="./images/stapler.png" alt="stapler" width="100px" height="100px"></div>
-                        <div class="memory-card" class="front-face"><img class="hidden" src="./images/hammer.png" alt="hammer" width="100px" height="100px"></div>
-                        <div class="memory-card" class="front-face"><img class="hidden" src="./images/paint.png" alt="paint bucket" width="100px" height="100px"></div>
-                        <div class="memory-card" class="front-face"><img class="hidden" src="./images/coffee.png" alt="coffee cup" width="100px" height="100px"></div>
-                        <div class="memory-card" class="front-face"><img class="hidden" src="./images/bananas.png" alt="bananas" width="100px" height="100px"></div>
-                        <!-- <div class="memory-card" class="front-face" class="back-face"><img class="duct" src="./images/tape.png" alt="duct tape" width="100px" height="100px"></div> -->
+                        <div class="memory-card"><img class="hidden" class="b" src="./images/skate.png" alt="skate board" width="100px" height="100px"></div>
+                        <div class="memory-card"><img class="hidden" class="b" src="./images/stapler.png" alt="stapler" width="100px" height="100px"></div>
+                        <div class="memory-card" data or data-index ><img class="hidden" src="./images/hammer.png" alt="hammer" width="100px" height="100px"></div>
+                        <div class="memory-card"><img class="hidden" src="./images/apple.png" alt="red apple" width="100px" height="100px"></div>
+                        <div class="memory-card" value="hammer"><img class="hidden" src="./images/hammer.png" alt="hammer" width="100px" height="100px"></div>
+                        
+                        <!-- <div class="memory-card"><img class="hidden" src="./images/paint.png" alt="paint bucket" width="100px" height="100px"> </div>
+                        <div class="memory-card"><img class="hidden" src="./images/fork.png" alt="fork" width="100px" height="100px"></div>
+                        <div class="memory-card"><img class="hidden" src="./images/screwdriver.png" alt="screw driver" width="100px" height="100px"></div>
+                        <div class="memory-card"><img class="hidden" src="./images/coffee.png" alt="coffee cup" width="100px" height="100px"></div>
+                        <div class="memory-card"><img class="hidden" src="./images/bananas.png" alt="bananas" width="100px" height="100px"></div>
+                        <div class="memory-card"><img class="hidden" src="./images/tape.png" alt="duct tape" width="100px" height="100px"></div>
+                        <div class="memory-card"><img class="hidden" src="./images/drill.png" alt="drill" width="100px" height="100px"></div>
+                        <div class="memory-card"><img class="hidden" src="./images/saw.png" alt="saw" width="100px" height="100px"></div>
+                        <div class="memory-card"><img class="hidden" src="./images/crayon.png" alt="crayon" width="100px" height="100px"></div>
+                        <div class="memory-card"><img class="hidden" src="./images/wrench.png" alt="wrench" width="100px" height="100px"></div>
+                        <div class="memory-card"><img class="hidden" src="./images/tapem.png" alt="tape measure" width="100px" height="100px"></div>
+                        <div class="memory-card"><img class="hidden" src="./images/nails.png" alt="nails" width="100px" height="100px"></div>
+                        <div class="memory-card"><img class="hidden" src="./images/clamp.png" alt="metal clamp" width="100px" height="100px"></div>
+                        <div class="memory-card"><img class="hidden" src="./images/wood.png" alt="plank of wood" width="100px" height="100px"></div>
+                        <div class="memory-card"><img class="hidden" src="./images/glue.png" alt="glue bottle" width="100px" height="100px"></div>
+                        <div class="memory-card"><img class="hidden" src="./images/level.png" alt="level" width="100px" height="100px"></div> -->
 
-                        <!-- <div class="memory-card" class="front-face" class="back-face"><img class="drill" src="./images/drill.png" alt="drill" width="100px" height="100px"></div>
-                        <div class="memory-card" class="front-face" class="back-face"><img class="saw" src="./images/saw.png" alt="saw" width="100px" height="100px"></div> -->
-                        <!-- <div class="memory-card" class="front-face" class="back-face"><img class="apple" src="./images/apple.png" alt="red apple" width="100px" height="100px"></div> -->
-                        <!-- <div class="memory-card-flip" class="front-face" class="back-face"><img id="crayon" src="./images/crayon.png" alt="crayon" width="100px" height="100px"></div>
-                            <div class="memory-card" class="front-face" class="back-face"><img class="wrench" src="./images/wrench.png" alt="wrench" width="100px" height="100px"></div>
-                            <div class="memory-card" class="front-face" class="back-face"><img class="tapem" src="./images/tapem.png" alt="tape measure" width="100px" height="100px"></div>
-                        <div class="memory-card-flip" class="front-face" class="back-face"><img id="nails" src="./images/nails.png" alt="nails" width="100px" height="100px"></div>
-                        <div class="memory-card-flip" class="front-face" class="back-face"><img id="metal clamp" src="./images/clamp.png" alt="metal clamp" width="100px" height="100px"></div>
-                        <div class="memory-card-flip" class="front-face" class="back-face"><img id="wood" src="./images/blackmemory-card-flip.png" alt="plank of wood" width="100px" height="100px"></div>
-                        <div class="memory-card-flip" class="front-face" class="back-face"><img id="glue" src="./images/blackmemory-card.png" alt="glue bottle" width="100px" height="100px"></div> -->
-                        <div class="memory-card" class="front-face" class="back-face"><img class="level hidden" src="./images/level.png" alt="level" width="100px" height="100px"></div>
                     </div>
         </div>
             <div id="endbox">
@@ -103,10 +104,10 @@
 
                     <div id="levelbox">
                         <p>Pick a level!</p>
-                         <img class="bennett" src="./images/01.png" alt="red star with number 1 inside" width="80" height="80">
-                            <img class="bennett" src="./images/02.png" alt="red star with number 2 inside" width="90" height="90">
-                            <img class="bennett" src="./images/03.png" alt="red star with number 3 inside" width="80" height="80">
-                            <img class="bennett" src="./images/04.png" alt="red star with number 4 inside" width="80" height="80">
+                            <img class="level" src="./images/01.png" alt="red star with number 1 inside" width="80" height="80">
+                            <img class="level" src="./images/02.png" alt="red star with number 2 inside" width="85" height="85">
+                            <img class="level" src="./images/03.png" alt="red star with number 3 inside" width="80" height="80">
+                            <img class="level" src="./images/04.png" alt="red star with number 4 inside" width="80" height="80">
                        </div>
                     <h2>TIMER:</h2>
                     <div id="timer" id="counter">
